# FORGE-studio

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
backend/: cli.py  engine.py  main.py  mock_server.py
backend/routes/: chat.py  commands.py  history.py  status.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  types.ts
frontend/src/components/: ChatPanel.tsx  CommandBar.tsx  DashboardPanel.tsx  StatusPanel.tsx
frontend/src/hooks/: useWebSocket.ts
tests/: conftest.py  test_routes.py
